--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,33 @@
+# =============================================================================
+# DEPENDENCIAS ARABIDOPSIS ROOT DETECTION PROJECT
+# =============================================================================
+
 # Core
 numpy>=1.21.0
 opencv-python>=4.5.0
+Pillow>=9.0.0
 
-# Deep Learning
+# Configuration
+PyYAML>=6.0
+
+# Deep Learning & YOLOv8
 ultralytics>=8.0.0
 torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
 
-# Image Processing
+# Image Processing & Morphology
 scikit-image>=0.19.0
+scipy>=1.10.0
 
-# Data
+# Data & Analysis
 pandas>=1.3.0
 matplotlib>=3.5.0
+
+# Optional: Progress bars y CLI improvements
+tqdm>=4.64.0
+
+# Development (comentar si no necesitas)
+# pytest>=7.0.0
+# black>=23.0.0
+# flake8>=5.0.0
